# learn-elrond

./: .gitignore  Dockerfile  README.md  build-all-and-run.sh
008-nft-research/: .gitignore  Cargo.toml
008-nft-research/interaction/: contract-interactions.sh
008-nft-research/mandos/: 01-deploy.scen.json  02-create-nft.scen.json
008-nft-research/meta/: Cargo.toml
008-nft-research/meta/src/: main.rs
008-nft-research/src/: chessout-nft.rs
008-nft-research/wasm/: Cargo.toml
008-nft-research/wasm/src/: lib.rs
CrowdfundNative/: App.js  README.md  app.json  package-lock.json  package.json
CrowdfundNative/android/app/: build.gradle
CrowdfundNative/components/: CreateAccount.js  Details.js  Home.js  OpenWallet.js  Profile.js  ScreenContainer.js  Search.js  Search2.js  SignIn.js  Splash.js
CrowdfundNative/context/: index.js  reducer.js  state.js
CrowdfundNative/ios/CrowdfundNative/: AppDelegate.m  Info.plist  LaunchScreen.storyboard
CrowdfundingNative/: README.md  app.json  index.js  metro.config.js  package-lock.json  package.json
CrowdfundingNative/android/: settings.gradle
CrowdfundingNative/ios/: Podfile
CrowdfundingNative/src/: App.js
archive/: Dockerfile
archive/CrowdfundNative/: App.js  README.md
archive/e02-crowdfunding-api/: .gitignore  Dockerfile_alpine  README.md  build.gradle  fastRun.bash
archive/e02-crowdfunding-web-app/: package-lock.json
archive/e03-crowdfund-esdt/: Cargo.toml
archive/e11-lottery/: Cargo.toml
archive/n02-node-cloud-run/: crowdfunding-esdt.abi.json  e02-crowdfunding.abi.json  index.ts  my-contract.abi.json  package.json  readme.md
docker-dev-env/: Dockerfile  readme.md
e02-crowdfunding/: Cargo.toml
e02-crowdfunding-api/scripts/: set-contract.bash
e02-crowdfunding-web-app/: .eslintrc.json  package.json
e02-crowdfunding-web-app/public/: e01-adder.wasm
e02-crowdfunding-web-app/src/: App.js
e02-crowdfunding/interaction/: deploy.snippet.sh  testnet.snippets.sh
e02-crowdfunding/mandos/: crowdfunding-fund.scen.json  crowdfunding-init.scen.json
e03-crowdfund-esdt/abi/: Cargo.toml
e03-crowdfund-esdt/mandos/: crowdfunding-claim-successful.scen.json  crowdfunding-fund-too-late.scen.json  crowdfunding-fund.scen.json  crowdfunding-init.scen.json
my-contract/: .gitignore  Cargo.toml  notes.md
my-contract/interaction/: devnet.snippets.sh
my-contract/mandos/: 01-init.scen.json  01_deploy.scen.json  02_create_nft.scen.json  03_buy_nft.scen.json
my-contract/meta/: Cargo.toml
my-contract/meta/src/: main.rs
my-contract/src/: my_contract.rs  nft_module.rs
my-contract/wasm/: Cargo.toml
my-contract/wasm/src/: lib.rs
(+108 files in other folders)
