[package]
name = "chessout-nft-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = [ "cdylib",]

[workspace]
members = [ ".",]

[dev-dependencies]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[dependencies.chessout-nft]
path = ".."

[dependencies.elrond-wasm-node]
version = "0.30.0"

[dependencies.elrond-wasm-output]
version = "0.30.0"
features = [ "wasm-output-mode",]
